<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">




<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/midnightblue"
    tools:context=".view.Schedule">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_one"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="40dp"/>
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="10dp"/>
    </androidx.cardview.widget.CardView>
    
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hour"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="10dp"/>
    </androidx.cardview.widget.CardView>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:timePickerMode="spinner"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_the_professional"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <CheckBox
            android:id="@+id/barberOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pedro da Silva"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <CheckBox
            android:id="@+id/barberTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guilherme Henrique"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <CheckBox
            android:id="@+id/barberThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="João Marcos"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/btSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/alizarin"
        android:layout_margin="40dp"/>


</LinearLayout>
</ScrollView>